Corrected teammates image and title spacing

--- a/app/assets/stylesheets/teammates.css.scss
+++ b/app/assets/stylesheets/teammates.css.scss
@@ -16,10 +16,13 @@
   .teammate {
     width: 20em;
     margin-bottom: 1em;
+    display: flex;
   }
   img {
     width: 5em;
     height: 5em;
+    flex: 1;
+    margin-left: 12px;
   }
   h2 {
     background-color: rgba(0, 0, 0, 0.5);
@@ -31,6 +34,8 @@
   vertical-align: middle;
   padding-left: .5em;
   display: inline-block;
+  position: relative;
+  left: 10.5%;
   h3 {
     color: #ffffff;
     font-size: 1.5em;
